# my-chromebookmarkexplorer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_windows.ps1
.github/workflows/: windows-build.yml
packaging/: installer.iss
resources/: generate_icons.py  icons.qrc
src/: BatchEditDialog.cpp  BatchEditDialog.h  BookmarkDocument.cpp  BookmarkDocument.h  BookmarkNode.cpp  BookmarkNode.h  ChromeProfiles.cpp  ChromeProfiles.h  HealthChecker.cpp  HealthChecker.h  ImportExport.cpp  ImportExport.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  TagDialog.cpp  TagDialog.h  Updater.cpp  Updater.h  main.cpp
tests/: HealthCheckerTest.cpp
